# automation_logger

./: README.md  pyproject.toml
src/: __init__.py  _config.py  _host.py  _json.py  _paths.py  logger.py
