[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-logger"
version = "0.1.0"
description = "Context-manager logger for automation runs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "syncforge",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
